fix: Fix alignment on desktop view

--- a/app/ps/ps.css
+++ b/app/ps/ps.css
@@ -46,7 +46,7 @@
     display: flex;
     flex-direction: row;
     height: 700px;
-    margin: 100px 120px 0px;
+    margin: 100px 120px 200px 120px;
     
 }
 
